added code for custom-queries-with-spring-data-jpa module